added Veggie pie recipe - spell check moqueca.html

--- a/pages/moqueca.html
+++ b/pages/moqueca.html
@@ -32,7 +32,7 @@
 
     <h2>How to make it:</h2>
     <ol>
-        <li>Rinse sea bass under running cold water; pat dry. Place in a shallow dish and season with lime juice, garlic, and salt. Marinate for 30 minutes</li>
+        <li>Rinse sea bass under running cold water; pat dry. Place in a shallow dish and season with lime juice, garlic, and salt (to taste). Marinate for 30 minutes</li>
         <li>Heat olive oil in a large skillet over medium heat. Add grated onion and cook for a few seconds. Add fish and marinade to the skillet and cook for 3 to 5 minutes. Stir in palm oil and onion rings, followed by water and coconut milk. Simmer for 15 minutes. Add green bell pepper, red bell pepper, tomatoes, cilantro, and green onions; cover and cook until vegetables are soft and flavors are well combined, about 5 minutes.</li>
     </ol>
     
