added images to recipe pages

--- a/pages/cake.html
+++ b/pages/cake.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Chocolate Cake</h1>
-    <img src="" alt="">
+    <img src="/img/cakito.jpg">
 
     <h2>What it is?</h2>
     <p>This <strong>Chocolate cake</strong> recipe is very basic yet very tasty recipe to fill that need to eat a very good cake or a chocolate dessert, or maybe BOTH!</p>
