--- a/pages/veggie.html
+++ b/pages/veggie.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>(Blender) Veggie Pie</h1>
-    <img src="" alt="">
+    <img src="/img/Veggie.jpg">
 
     <h2>What it is?</h2>
     <p>This <strong>Veggie Pie</strong> is a quick to make, very tasty recipe and usually can be done with leftover vegetables found in everybodies fridge</p>
