--- a/pages/moqueca.html
+++ b/pages/moqueca.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Moqueca (Brazilian Fish Stew)</h1>
-    <img src="" alt="">
+    <img src="/img/moqueca.jpg">
 
     <h2>What it is?</h2>
     <p>The <strong>Moqueca (also Brazilian Fish Stew)</strong> is a very typical, traditional Brazilian dish that originated in the Northeast. The palm oil gives it its distinctive flavor. Best served hot with white rice or coconut rice.</p>
