added links to recipe page in index.html

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <h2>Recipe Book</h2>
-    <a href=""><h4>Veggie Pie</h4></a>
+    <a href="/pages/veggie.html"><h4>Veggie Pie</h4></a>
 
-    <a href=""><h4>Moqueca (Fish Stew)</h4></a>
+    <a href="/pages/moqueca.html"><h4>Moqueca (Fish Stew)</h4></a>
 
-    <a href=""><h4>Chocolate Cake</h4></a>
+    <a href="/pages/cake.html"><h4>Chocolate Cake</h4></a>
     
 </body>
 </html>
